Doc/ANB/anbtk/DSL/family/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Family
Rule 1     Family -> Couples
Rule 2     Names -> Names NAME
Rule 3     Names -> NAME
Rule 4     Names -> empty
Rule 5     Couples -> Couples Couple
Rule 6     Couples -> Couple
Rule 7     Couple -> Person PLUS Person NEWLINE Children NEWLINE
Rule 8     Person -> Names Dates
Rule 9     Person -> UND
Rule 10    Dates -> LP DATE DATE RP
Rule 11    Dates -> LP DATE NDY RP
Rule 12    Dates -> LP DATE UNK RP
Rule 13    Dates -> LP UNK NDY RP
Rule 14    Dates -> LP UNK DATE RP
Rule 15    Dates -> UNK
Rule 16    Children -> Children Child
Rule 17    Children -> Child
Rule 18    Children -> empty
Rule 19    Child -> POINT Person NEWLINE
Rule 20    empty -> <empty>

Terminals, with rules where they appear

DATE                 : 10 10 11 12 14
LP                   : 10 11 12 13 14
NAME                 : 2 3
NDY                  : 11 13
NEWLINE              : 7 7 19
PLUS                 : 7
POINT                : 19
RP                   : 10 11 12 13 14
UND                  : 9
UNK                  : 12 13 14 15
error                : 

Nonterminals, with rules where they appear

Child                : 16 17
Children             : 7 16
Couple               : 5 6
Couples              : 1 5
Dates                : 8
Family               : 0
Names                : 2 8
Person               : 7 7 19
empty                : 4 18

Parsing method: LALR

state 0

    (0) S' -> . Family
    (1) Family -> . Couples
    (5) Couples -> . Couples Couple
    (6) Couples -> . Couple
    (7) Couple -> . Person PLUS Person NEWLINE Children NEWLINE
    (8) Person -> . Names Dates
    (9) Person -> . UND
    (2) Names -> . Names NAME
    (3) Names -> . NAME
    (4) Names -> . empty
    (20) empty -> .

  ! shift/reduce conflict for NAME resolved as shift
    UND             shift and go to state 6
    NAME            shift and go to state 7
    LP              reduce using rule 20 (empty -> .)
    UNK             reduce using rule 20 (empty -> .)

  ! NAME            [ reduce using rule 20 (empty -> .) ]

    Family                         shift and go to state 1
    Couples                        shift and go to state 2
    Couple                         shift and go to state 3
    Person                         shift and go to state 4
    Names                          shift and go to state 5
    empty                          shift and go to state 8

state 1

    (0) S' -> Family .



state 2

    (1) Family -> Couples .
    (5) Couples -> Couples . Couple
    (7) Couple -> . Person PLUS Person NEWLINE Children NEWLINE
    (8) Person -> . Names Dates
    (9) Person -> . UND
    (2) Names -> . Names NAME
    (3) Names -> . NAME
    (4) Names -> . empty
    (20) empty -> .

  ! shift/reduce conflict for NAME resolved as shift
    $end            reduce using rule 1 (Family -> Couples .)
    UND             shift and go to state 6
    NAME            shift and go to state 7
    LP              reduce using rule 20 (empty -> .)
    UNK             reduce using rule 20 (empty -> .)

  ! NAME            [ reduce using rule 20 (empty -> .) ]

    Couple                         shift and go to state 9
    Person                         shift and go to state 4
    Names                          shift and go to state 5
    empty                          shift and go to state 8

state 3

    (6) Couples -> Couple .

    UND             reduce using rule 6 (Couples -> Couple .)
    NAME            reduce using rule 6 (Couples -> Couple .)
    LP              reduce using rule 6 (Couples -> Couple .)
    UNK             reduce using rule 6 (Couples -> Couple .)
    $end            reduce using rule 6 (Couples -> Couple .)


state 4

    (7) Couple -> Person . PLUS Person NEWLINE Children NEWLINE

    PLUS            shift and go to state 10


state 5

    (8) Person -> Names . Dates
    (2) Names -> Names . NAME
    (10) Dates -> . LP DATE DATE RP
    (11) Dates -> . LP DATE NDY RP
    (12) Dates -> . LP DATE UNK RP
    (13) Dates -> . LP UNK NDY RP
    (14) Dates -> . LP UNK DATE RP
    (15) Dates -> . UNK

    NAME            shift and go to state 12
    LP              shift and go to state 13
    UNK             shift and go to state 14

    Dates                          shift and go to state 11

state 6

    (9) Person -> UND .

    PLUS            reduce using rule 9 (Person -> UND .)
    NEWLINE         reduce using rule 9 (Person -> UND .)


state 7

    (3) Names -> NAME .

    NAME            reduce using rule 3 (Names -> NAME .)
    LP              reduce using rule 3 (Names -> NAME .)
    UNK             reduce using rule 3 (Names -> NAME .)


state 8

    (4) Names -> empty .

    NAME            reduce using rule 4 (Names -> empty .)
    LP              reduce using rule 4 (Names -> empty .)
    UNK             reduce using rule 4 (Names -> empty .)


state 9

    (5) Couples -> Couples Couple .

    UND             reduce using rule 5 (Couples -> Couples Couple .)
    NAME            reduce using rule 5 (Couples -> Couples Couple .)
    LP              reduce using rule 5 (Couples -> Couples Couple .)
    UNK             reduce using rule 5 (Couples -> Couples Couple .)
    $end            reduce using rule 5 (Couples -> Couples Couple .)


state 10

    (7) Couple -> Person PLUS . Person NEWLINE Children NEWLINE
    (8) Person -> . Names Dates
    (9) Person -> . UND
    (2) Names -> . Names NAME
    (3) Names -> . NAME
    (4) Names -> . empty
    (20) empty -> .

  ! shift/reduce conflict for NAME resolved as shift
    UND             shift and go to state 6
    NAME            shift and go to state 7
    LP              reduce using rule 20 (empty -> .)
    UNK             reduce using rule 20 (empty -> .)

  ! NAME            [ reduce using rule 20 (empty -> .) ]

    Person                         shift and go to state 15
    Names                          shift and go to state 5
    empty                          shift and go to state 8

state 11

    (8) Person -> Names Dates .

    PLUS            reduce using rule 8 (Person -> Names Dates .)
    NEWLINE         reduce using rule 8 (Person -> Names Dates .)


state 12

    (2) Names -> Names NAME .

    NAME            reduce using rule 2 (Names -> Names NAME .)
    LP              reduce using rule 2 (Names -> Names NAME .)
    UNK             reduce using rule 2 (Names -> Names NAME .)


state 13

    (10) Dates -> LP . DATE DATE RP
    (11) Dates -> LP . DATE NDY RP
    (12) Dates -> LP . DATE UNK RP
    (13) Dates -> LP . UNK NDY RP
    (14) Dates -> LP . UNK DATE RP

    DATE            shift and go to state 16
    UNK             shift and go to state 17


state 14

    (15) Dates -> UNK .

    PLUS            reduce using rule 15 (Dates -> UNK .)
    NEWLINE         reduce using rule 15 (Dates -> UNK .)


state 15

    (7) Couple -> Person PLUS Person . NEWLINE Children NEWLINE

    NEWLINE         shift and go to state 18


state 16

    (10) Dates -> LP DATE . DATE RP
    (11) Dates -> LP DATE . NDY RP
    (12) Dates -> LP DATE . UNK RP

    DATE            shift and go to state 19
    NDY             shift and go to state 20
    UNK             shift and go to state 21


state 17

    (13) Dates -> LP UNK . NDY RP
    (14) Dates -> LP UNK . DATE RP

    NDY             shift and go to state 22
    DATE            shift and go to state 23


state 18

    (7) Couple -> Person PLUS Person NEWLINE . Children NEWLINE
    (16) Children -> . Children Child
    (17) Children -> . Child
    (18) Children -> . empty
    (19) Child -> . POINT Person NEWLINE
    (20) empty -> .

  ! shift/reduce conflict for POINT resolved as shift
    POINT           shift and go to state 27
    NEWLINE         reduce using rule 20 (empty -> .)

  ! POINT           [ reduce using rule 20 (empty -> .) ]

    Children                       shift and go to state 24
    Child                          shift and go to state 25
    empty                          shift and go to state 26

state 19

    (10) Dates -> LP DATE DATE . RP

    RP              shift and go to state 28


state 20

    (11) Dates -> LP DATE NDY . RP

    RP              shift and go to state 29


state 21

    (12) Dates -> LP DATE UNK . RP

    RP              shift and go to state 30


state 22

    (13) Dates -> LP UNK NDY . RP

    RP              shift and go to state 31


state 23

    (14) Dates -> LP UNK DATE . RP

    RP              shift and go to state 32


state 24

    (7) Couple -> Person PLUS Person NEWLINE Children . NEWLINE
    (16) Children -> Children . Child
    (19) Child -> . POINT Person NEWLINE

    NEWLINE         shift and go to state 33
    POINT           shift and go to state 27

    Child                          shift and go to state 34

state 25

    (17) Children -> Child .

    NEWLINE         reduce using rule 17 (Children -> Child .)
    POINT           reduce using rule 17 (Children -> Child .)


state 26

    (18) Children -> empty .

    NEWLINE         reduce using rule 18 (Children -> empty .)
    POINT           reduce using rule 18 (Children -> empty .)


state 27

    (19) Child -> POINT . Person NEWLINE
    (8) Person -> . Names Dates
    (9) Person -> . UND
    (2) Names -> . Names NAME
    (3) Names -> . NAME
    (4) Names -> . empty
    (20) empty -> .

  ! shift/reduce conflict for NAME resolved as shift
    UND             shift and go to state 6
    NAME            shift and go to state 7
    LP              reduce using rule 20 (empty -> .)
    UNK             reduce using rule 20 (empty -> .)

  ! NAME            [ reduce using rule 20 (empty -> .) ]

    Person                         shift and go to state 35
    Names                          shift and go to state 5
    empty                          shift and go to state 8

state 28

    (10) Dates -> LP DATE DATE RP .

    PLUS            reduce using rule 10 (Dates -> LP DATE DATE RP .)
    NEWLINE         reduce using rule 10 (Dates -> LP DATE DATE RP .)


state 29

    (11) Dates -> LP DATE NDY RP .

    PLUS            reduce using rule 11 (Dates -> LP DATE NDY RP .)
    NEWLINE         reduce using rule 11 (Dates -> LP DATE NDY RP .)


state 30

    (12) Dates -> LP DATE UNK RP .

    PLUS            reduce using rule 12 (Dates -> LP DATE UNK RP .)
    NEWLINE         reduce using rule 12 (Dates -> LP DATE UNK RP .)


state 31

    (13) Dates -> LP UNK NDY RP .

    PLUS            reduce using rule 13 (Dates -> LP UNK NDY RP .)
    NEWLINE         reduce using rule 13 (Dates -> LP UNK NDY RP .)


state 32

    (14) Dates -> LP UNK DATE RP .

    PLUS            reduce using rule 14 (Dates -> LP UNK DATE RP .)
    NEWLINE         reduce using rule 14 (Dates -> LP UNK DATE RP .)


state 33

    (7) Couple -> Person PLUS Person NEWLINE Children NEWLINE .

    UND             reduce using rule 7 (Couple -> Person PLUS Person NEWLINE Children NEWLINE .)
    NAME            reduce using rule 7 (Couple -> Person PLUS Person NEWLINE Children NEWLINE .)
    LP              reduce using rule 7 (Couple -> Person PLUS Person NEWLINE Children NEWLINE .)
    UNK             reduce using rule 7 (Couple -> Person PLUS Person NEWLINE Children NEWLINE .)
    $end            reduce using rule 7 (Couple -> Person PLUS Person NEWLINE Children NEWLINE .)


state 34

    (16) Children -> Children Child .

    NEWLINE         reduce using rule 16 (Children -> Children Child .)
    POINT           reduce using rule 16 (Children -> Children Child .)


state 35

    (19) Child -> POINT Person . NEWLINE

    NEWLINE         shift and go to state 36


state 36

    (19) Child -> POINT Person NEWLINE .

    NEWLINE         reduce using rule 19 (Child -> POINT Person NEWLINE .)
    POINT           reduce using rule 19 (Child -> POINT Person NEWLINE .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for NAME in state 0 resolved as shift
WARNING: shift/reduce conflict for NAME in state 2 resolved as shift
WARNING: shift/reduce conflict for NAME in state 10 resolved as shift
WARNING: shift/reduce conflict for POINT in state 18 resolved as shift
WARNING: shift/reduce conflict for NAME in state 27 resolved as shift
